java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advHighlighting6/StaticOnDemandImportResolvesToClass.java
import static java.<error descr="Class java.io not found">io</error>.*;

class Main { }